--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -37,7 +37,7 @@ height:40px
 .header__center {
   display: flex;
   flex: 1;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .header__option > .MuiSvgIcon-root{
